--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@types/lodash": "^4.17.13",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
+    "nestjs-axios-retry": "^1.0.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
