--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.13",
+    "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
